<resources>
    <string name="app_name">nmedia</string>
    <string name="first_text">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="save_content">ADD Post</string>
    <string name="canсel_edit">Cancel Edit</string>
    <string name="editing_mode">Editing Mode</string>
    <string name="like_button">Like_Button</string>
    <string name="share_post">Share</string>
    <string name="option_menu">Option Menu</string>
</resources>